tests/ui/errors/snapshots/parse_error_enum_variant_missing_paren.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Syntax error
   ╭─[test.lis:2:16]
 1 │ 
 2 │ enum E { A(int }
   ·                ┬
   ·                ╰── expected `,` or `)`
   ╰────
  help: Add a comma between elements · code: [parse.syntax_error]
